correct gap problems

--- a/lab4/style.css
+++ b/lab4/style.css
@@ -2,16 +2,19 @@ body{
     margin:0;
 }
 #main-con{
-    background-color: #d4d4d4;
+    background-color: #FF1654;
     display:grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    grid-column-gap: 5px;
+    /* grid-row-gap: 5px; */
 }
 #sec-con{
-    background-color: blueviolet;
+    /* background-color: #0E1559; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    grid-gap: 5px 5px;
 }
 .col_1st{
     background-color: aqua;
@@ -19,5 +22,16 @@ body{
     grid-row: 1/2;
 }
 .col_2nd{
-    background-color:burlywood;
+    background-color:#0053C9;
+    width: 300px;
+    height: 300px;
+}
+.pad{
+    /* margin: 20px; */
+    padding : 20px;
+}
+.shadow{
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 4px 4px 4px #F3FFBD;
 }
